src/main/kubernetes/artemis/deployment/gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    field.cattle.io/creatorId: user-gpcv5
  labels:
    cattle.io/creator: norman
    workload.user.cattle.io/workloadselector: deployment-artemis-gateway
  name: gateway
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-artemis-gateway
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-artemis-gateway
    spec:
      containers:
      - env:
        - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
          value: http://admin:$${jhipster.registry.password}@jhipster-registry:8761/eureka
        - name: JHIPSTER_SLEEP
          value: "30"
        - name: KAFKA_BOOTSTRAPSERVERS
          value: kafka:9092
        - name: MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED
          value: "true"
        - name: SPRING_CLOUD_CONFIG_URI
          value: http://admin:$${jhipster.registry.password}@jhipster-registry:8761/config
        - name: SPRING_PROFILES_ACTIVE
          value: prod,api-docs
        - name: _JAVA_OPTIONS
          value: -Xmx512m -Xms256m
        image: mmehmed/artemis-gateway
        imagePullPolicy: Always
        name: gateway
        ports:
        - containerPort: 8080
          name: 8080tcp02
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
