src/main/kubernetes/artemis/deployment/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
