src/main/kubernetes/artemis/deployment/artemis-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artemis-app
spec:
  rules:
  - host: artemis-app.default.rancher.localhost
    http:
      paths:
      - backend:
          service:
            name: artemis
            port: 
              number: 8080
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - artemis-app.default.rancher.localhost
